fix: hidden menu on safari

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -20,6 +20,12 @@ body {
   margin: 0;
 }
 
+html,
+body,
+#__next {
+  height: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
